Make asynchronous put insertions int IMap